--- a/keshav agarwal.html
+++ b/keshav agarwal.html
@@ -132,7 +132,7 @@
           <div class="col-md-3">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About Us</h2>
-              <p><b><em>Caritas</b></em> is a a youth run-initiative that focuses on providing food and sanitation to those in need.</p>
+              <p><b><em>Caritas</b></em> is a youth run-initiative that focuses on providing food and sanitation to those in need.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://twitter.com/officialCaritas"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.facebook.com/Caritaskol-108593177624722"><span class="icon-facebook"></span></a></li>
